<resources>
    <string name="app_name">TallyMobile</string>
    <string name="default_web_client_id">784033785836-157on09627c7a44460vu88noj2jmjpev.apps.googleusercontent.com</string>
    <string name="validate">Validate</string>
    <string name="tally_net_id">Tally Serial Number</string>
    <string name="tally_password">Create Password</string>
    <string name="enter_your_tally_credentials">Enter Your Tally Credentials</string>
    <string name="confirm_your_tally_password">Confirm Your Password</string>
    <string name="enter_the_detail_to_create_new_item">Enter the detail to create new Item</string>
    <string name="product_name">Product name</string>
    <string name="path_number">Part Number</string>
    <string name="enter_units">Enter Units</string>
    <string name="enter_hsn_code">Enter HSN Code</string>
    <string name="enter_gst_percentage">Enter Gst Percentage</string>
    <string name="create_item">Create Item</string>
    <string name="product_description">Product Description</string>
    <string name="enter_mrp">Enter MRP</string>
    <string name="enter_purchase_price">Enter Purchase Price</string>
    <string name="enter_sell_price">Enter Sells Price</string>
    <string name="please_wait">Please Wait…</string>
    <string name="fab_description">Create Items</string>
    <string name="items">Items</string>
    <string name="party">Party</string>
    <string name="price_purchase">Purchase Price</string>
    <string name="sells_price">Sells Price</string>
    <string name="item_name">Item Name</string>
    <string name="mrp">MRP</string>
    <string name="item_list">Item List</string>
    <string name="create">Create</string>
    <string name="alter_item">Alter Item</string>
    <string name="alter">Alter</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="connect">Connect</string>
    <string name="amp_tally_on_the_go">And Tally on the go.!</string>
    <string name="simplify_accounting_tasks_with_tally_anywhere">Simplify Accounting Tasks with Tally Anywhere</string>
    <string name="create_ledger">Create Ledger</string>

</resources>