<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:clipToPadding="false"
    tools:context=".CreateItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            app:strokeColor="@color/secondaryText"
            android:backgroundTint="@color/secondaryColor"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:cardCornerRadius="@dimen/_14sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_2sdp"
                    android:scrollbars="none"
                    tools:ignore="ScrollViewCount">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/headertitle"
                            style="@style/viewParent"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:text="@string/enter_the_detail_to_create_new_item"
                            android:textSize="@dimen/headerTextSize"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputProductName"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextProductName"
                                style="@style/modifiedEditText"
                                android:hint="@string/product_name"
                                android:inputType="text"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPathNumber"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextPathNumber"
                                style="@style/modifiedEditText"
                                android:hint="@string/path_number"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputUom"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextUom"
                                style="@style/modifiedEditText"
                                android:hint="@string/enter_units"
                                android:inputType="textNoSuggestions"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputHsnCode"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextHsnCode"
                                style="@style/modifiedEditText"
                                android:inputType="number"
                                android:hint="@string/enter_hsn_code"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputMrp"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextMrp"
                                style="@style/modifiedEditText"
                                android:hint="@string/enter_mrp"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputGst"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextGst"
                                style="@style/modifiedEditText"
                                android:hint="@string/enter_gst_percentage"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPurchasePrice"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextPurchasePrice"
                                style="@style/modifiedEditText"
                                android:hint="@string/enter_purchase_price"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputSellPrice"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextSellPrice"
                                style="@style/modifiedEditText"
                                android:hint="@string/enter_sell_price"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputDescription"
                            style="@style/parent"
                            android:layout_height="@dimen/_45ssp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editTextDescription"
                                style="@style/modifiedEditText"
                                android:hint="@string/product_description"
                                android:maxLines="5"
                                android:inputType="textMultiLine"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:animateLayoutChanges="true">
                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/createItemBtn"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_45sdp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginBottom="5dp"
                                app:strokeColor="?attr/colorControlNormal"
                                app:strokeWidth="1dp"
                                app:cornerRadius="@dimen/_10sdp"
                                android:backgroundTint="@color/googleBlue"
                                android:text="@string/create_item"
                                android:textAllCaps="false"
                                android:textColor="@color/wheatWhite"
                                android:textSize="@dimen/_14ssp" />
                            <ProgressBar
                                android:id="@+id/pBar1"
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_gravity="center"
                                android:visibility="invisible" />
                        </FrameLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</ScrollView>