<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:background="@color/primaryColor"
    tools:context=".TallyCredentialsActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_14sdp"
        app:strokeColor="?attr/colorControlNormal"
        android:backgroundTint="@color/secondaryColor"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_tally_credentials"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputTallyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextTallyId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/tally_net_id"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:backgroundTint="@color/primaryColor"
                app:endIconTint="@color/primaryColor"
                android:layout_marginTop="@dimen/_8sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tally_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:autofillHints="password" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:backgroundTint="@color/primaryColor"
                app:endIconTint="@color/primaryColor"
                android:layout_marginTop="@dimen/_8sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_your_tally_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:autofillHints="password" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/validateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    app:cornerRadius="@dimen/_10sdp"
                    android:text="@string/validate"
                    android:textSize="@dimen/_14ssp"

                    android:layout_marginStart="@dimen/_2sdp"
                    app:strokeColor="?attr/colorControlNormal"
                    app:strokeWidth="1dp"
                    android:textAllCaps="false"
                    android:textColor="@color/wheatWhite"
                    android:backgroundTint="@color/googleBlue" />


                <ProgressBar
                    android:id="@+id/pBar1"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>